2012-02-23  Kevin Ollivier  <kevino@theolliviers.com>

        [wx] Build fix, add recently added source dirs.

        * waf/build/settings.py:

2012-02-23  Simon Hausmann  <simon.hausmann@nokia.com>

        [Qt] Add support for touch cancellation
        https://bugs.webkit.org/show_bug.cgi?id=79348

        Reviewed by Kenneth Rohde Christiansen.

        Added straight-forward touch cancellation event sending to Qt WK1 DRT
        and WK2 WTR.

        * DumpRenderTree/qt/EventSenderQt.cpp:
        (EventSender::touchCancel):
        (EventSender::cancelTouchPoint):
        * DumpRenderTree/qt/EventSenderQt.h:
        (EventSender):
        * WebKitTestRunner/EventSenderProxy.h:
        (EventSenderProxy):
        * WebKitTestRunner/InjectedBundle/Bindings/EventSendingController.idl:
        * WebKitTestRunner/InjectedBundle/EventSendingController.cpp:
        (WTR::EventSendingController::touchCancel):
        (WTR):
        (WTR::EventSendingController::cancelTouchPoint):
        * WebKitTestRunner/InjectedBundle/EventSendingController.h:
        (EventSendingController):
        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::didReceiveSynchronousMessageFromInjectedBundle):
        * WebKitTestRunner/qt/EventSenderProxyQt.cpp:
        (WTR::EventSenderProxy::touchCancel):
        (WTR):
        (WTR::EventSenderProxy::cancelTouchPoint):

2012-02-23  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r108626.
        http://trac.webkit.org/changeset/108626
        https://bugs.webkit.org/show_bug.cgi?id=79370

        broke qt-wk2 bot, somehow the workaround does not work on the
        bot (Requested by Ossy on #webkit).

        * WebKitTestRunner/qt/PlatformWebViewQt.cpp:
        (WTR::WrapperWindow::handleStatusChanged):
        (WTR::PlatformWebView::resizeTo):

2012-02-23  ChangSeok Oh  <shivamidow@gmail.com>

        [GTK] DRT doesn't support scheduleAsynchronousKeyDown.