@@ -18,6 +18,7 @@
         <file>qml/ItemSelector.qml</file>
         <file>qml/MockTouchPoint.qml</file>
         <file>qml/PromptDialog.qml</file>
+        <file>qml/ProxyAuthenticationDialog.qml</file>
         <file>qml/ViewportInfoItem.qml</file>
         <file>useragentlist.txt</file>
         <file>icons/favicon.png</file>
