@@ -1,3 +1,14 @@
+2012-02-23  Michael Brüning  <michael.bruning@nokia.com>
+
+        [Qt][WK2] Implement proxy authentication dialog.
+        https://bugs.webkit.org/show_bug.cgi?id=79350
+
+        Reviewed by Simon Hausmann.
+
+        * MiniBrowser/qt/MiniBrowser.qrc:
+        * MiniBrowser/qt/qml/BrowserWindow.qml:
+        * MiniBrowser/qt/qml/ProxyAuthenticationDialog.qml: Added.
+
 2012-02-23  Kevin Ollivier  <kevino@theolliviers.com>
 
         [wx] Build fix, add recently added source dirs.
